# OMPEval

./: CMakeLists.txt
omp/: EquityCalculator.h
